cmake_minimum_required(VERSION 3.5)

project(GetMAC LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(GetMAC main.cpp
)

include(GNUInstallDirs)
install(TARGETS GetMAC
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
